--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <img src="img/hero.png" alt="Elieer Gutierrez">
             </div>
         <h1>Elieer Gutierrez</h1>
-        <h2>Tecnico medio en servicios administrativos, mención informática</h2>
+        <h2>Técnico medio en servicios administrativos, mención informática</h2>
         <div class="redes">
             <!-- social --> 
             <div class="card">
@@ -63,7 +63,7 @@
      <section id="aboutme" class="aboutme">
         <div class="container-aboutme">
             <h2>Sobre mí</h2>
-            <p>¡Hola! soy <span>Elieer,</span> Soy técnico medio en comercio y servicios administrativos, mención Informática. Actualmente estudiante de la carrera análisis de sistemas, tengo conocimientos sobre mantenimiento de equipos electronicos, uso de programas ofimáticos, conocimientos basicos en lenguajes de programación como Python; de etiquetado como HTML; y de igual manera de diseño y maquetización como CSS. Tambien opero sistemas operativos como Windows y Linux</p>
+            <p>¡Hola! soy <span>Elieer,</span> Soy técnico medio en comercio y servicios administrativos, mención Informática. Actualmente estudiante de la carrera análisis de sistemas, tengo conocimientos sobre mantenimiento de equipos electrónicos, uso de programas ofimáticos, conocimientos básicos en lenguajes de programación como Python; de etiquetado como HTML; y de igual manera de diseño y maquetización como CSS. También opero sistemas operativos como Windows y Linux</p>
         </div>
         <div class="fila">
              <!-- Datos personales -->
@@ -75,7 +75,7 @@
                         05/11/2002
                     </li>
                     <li>
-                        <strong>Telefono</strong>
+                        <strong>Teléfono</strong>
                         +58 426-2505504
                     </li>
                     <li>
@@ -120,7 +120,7 @@
                 </div>
               </div>
         </div>
-        <button>Descargar CV <i class="fa-solid fa-download"></i>
+        <button>Descrargar CV <i class="fa-solid fa-download"></i>
             <span class="overlay"></span>
         </button>
      </section>
@@ -169,7 +169,7 @@
                     </div>
 
                      <div class="skill">
-                        <span>Mantenimiento de equipos electronicos</span>
+                        <span>Mantenimiento de equipos electrónicos</span>
                             <div class="bar-skill">
                                 <div class="progreso">
                                     <span>80%</span>
@@ -235,7 +235,7 @@
     <!-- section cv -->
       <section id="cv" class="cv">
         <div class="container-cv">
-            <h2>Síntesis Curicular</h2>
+            <h2>Síntesis Curricular</h2>
             <div class="fila">
                 <div class="col izquierda">
                     <h3>Formación Académica</h3>
@@ -269,7 +269,7 @@
                         <h4>Mesero</h4>
                         <span class="casa">LoboBurger Restaurant</span>
                         <span class="fecha">01/01/25 - Actualidad</span>
-                        <p>Mesero y atencion al público</p>
+                        <p>Mesero y atención al público</p>
                         <div class="containerd">
                             <div class="circulod">
                             </div>
@@ -280,7 +280,7 @@
                         <h4>Vendedor de filtros y lubricantes</h4>
                         <span class="casa">Multirepuestos HM3</span>
                         <span class="fecha">2024</span>
-                        <p>Vendedor de filtros y lubricantes para todo tipo de vehiculos (ligero y de carga)</p>
+                        <p>Vendedor de filtros y lubricantes para todo tipo de vehículos (ligero y de carga)</p>
                         <div class="containerd">
                             <div class="circulod">
                             </div>
@@ -291,7 +291,7 @@
                         <h4>Encargado de taller mecánico automotriz</h4>
                         <span class="casa">AKM Vzla</span>
                         <span class="fecha">03/2023 - 09/2023</span>
-                        <p>Jefe de taller, tecnico en reparaciones automotriz y diagnostico de fallas; balanceador de neumaticos  y cauchero</p>
+                        <p>Jefe de taller, técnico en reparaciones automotriz y diagnóstico de fallas; balanceador de neumaticos  y cauchero</p>
                         <div class="containerd">
                             <div class="circulod">
                             </div>
@@ -299,10 +299,10 @@
                     </div>
 
                     <div class="item der">
-                        <h4>Tecnico en reparaciones automotriz</h4>
+                        <h4>Técnico en reparaciones automotriz</h4>
                         <span class="casa">Concesionario Chevrolet De Leo Motors c.a</span>
                         <span class="fecha">2019 - 2022</span>
-                        <p>Tecnico en reparaciones automotriz, diagnostico de fallas, mecanica ligera y armado de motores</p>
+                        <p>Técnico en reparaciones automotríz, diagnostico de fallas, mecánica ligera y armado de motores</p>
                         <div class="containerd">
                             <div class="circulod">
                             </div>
@@ -407,18 +407,6 @@
             </div>     
     </footer>
 
-    <script src="script.js" crossorigin="anonymous"></script>
-    <!-- script para el formulario -->
-    <script>
-        const $form = document.querySelector('#form')
-
-        $form.addEventListener('submit', handleSubmit)
-
-        function handleSubmit(event){
-            event.preventDefault()
-            const form = new FormData($form)
-            console.log(form.get('name'))
-        }
-    </script>
       </body>
+<script src="script.js" crossorigin="anonymous"></script>
 </html>
