--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
               </div>
         </div>
-        <button>Descargar CV <i class="fa-solid fa-download"></i>
+        <button>Descrargar CV <i class="fa-solid fa-download"></i>
             <span class="overlay"></span>
         </button>
      </section>
