--- a/index.html
+++ b/index.html
@@ -120,8 +120,11 @@
                 </div>
               </div>
         </div>
-        <button>Descrargar CV <i class="fa-solid fa-download"></i>
+        <button>
+            <a href="/source/cv.pdf">
+            Descrargar CV <i class="fa-solid fa-download"></i>
             <span class="overlay"></span>
+            </a>
         </button>
      </section>
     <!-- section skills -->
