--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
               </div>
         </div>
         <button>
-            <a href="/source/cv.pdf">
-            Descrargar CV <i class="fa-solid fa-download"></i>
-            <span class="overlay"></span>
+            <a href="/source/cv.pdf" target="_blank" rel="noopener">
+                Descrargar CV <i class="fa-solid fa-download"></i>
+                <span class="overlay"></span>
             </a>
         </button>
      </section>
