--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
         <button>
             <a href="/source/cv.pdf" target="_blank" rel="noopener">
-                Descrargar CV <i class="fa-solid fa-download"></i>
+                Descargar CV <i class="fa-solid fa-download"></i>
                 <span class="overlay"></span>
             </a>
         </button>
