--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
      <section id="aboutme" class="aboutme">
         <div class="container-aboutme">
             <h2>Sobre mí</h2>
-            <p>¡Hola! soy <span>Elieer,</span> Soy técnico medio en comercio y servicios administrativos, mención Informática. Actualmente estudiante de la carrera análisis de sistemas, tengo conocimientos sobre mantenimiento de equipos electrónicos, uso de programas ofimáticos, conocimientos básicos en lenguajes de programación como Python; de etiquetado como HTML; y de igual manera de diseño y maquetización como CSS. También opero sistemas operativos como Windows y Linux</p>
+            <p>¡Hola! soy <span>Elieer,</span> Soy técnico medio en comercio y servicios administrativos, mención Informática. Actualmente estudiante de la carrera análisis de sistemas, tengo conocimientos sobre mantenimiento de equipos electrónicos, uso de programas ofimáticos, conocimientos básicos en lenguajes de programación como Python; de etiquetado como HTML; y de igual manera de diseño y maquetización como CSS. También opero sistemas operativos como Windows y Linux y estoy en búsqueda de una oportunidad para realizar mis pasantías</p>
         </div>
         <div class="fila">
              <!-- Datos personales -->
