Actualizar archivos de estilo y scripts

--- a/index.html
+++ b/index.html
@@ -145,6 +145,16 @@
                     </div>
 
                     <div class="skill">
+                        <span>Python</span>
+                            <div class="bar-skill">
+                                <div class="progreso">
+                                    <span>30%</span>
+                                </div>
+                            </div>
+                    </div>
+
+
+                    <div class="skill">
                         <span>Office</span>
                             <div class="bar-skill">
                                 <div class="progreso">
@@ -241,26 +251,54 @@
             <div class="fila">
                 <div class="col izquierda">
                     <h3>Formación Académica</h3>
+
+                    <div class="item izq">
+                        <h4>Curso Educativo Técnico y Desarollo en Odoo</h4>
+                        <span class="casa">Odoo S.A.</span>
+                        <span class="fecha">4 horas Académicas 2025</span>
+                        <p>Formación Técnica en Odoo, conceptos </p>
+                        <div class="containeri">
+                            <div class="circuloi"></div>
+                        </div>
+                    </div>
+
+
                     <div class="item izq">
                         <h4>T.S.U Análisis de Sistemas</h4>
                         <span class="casa">I.U.T.E.P.I Instituto Universitario de Tecnología para la Informática</span>
                         <span class="fecha">2023 - 2025</span>
                         <p>Formación como Técnico Superior Universitario en Análisis de Sistemas, con conocimientos en lenguajes de programación, bases de datos, redes y mantenimiento de equipos electrónicos.</p>
                         <div class="containeri">
-                            <div class="circuloi">
-
-                            </div>
+                            <div class="circuloi"></div>
                         </div>
                     </div>
+                    
+                    <div class="item izq">
+                        <h4>Curso de Mantenimiento y Reparación de equipos.</h4>
+                        <span class="casa">Digicomp C.A. Acarigua, Edo. Portuguesa.</span>
+                        <span class="fecha">160 horas Académicas (2017)</span>
+                        <div class="containeri">
+                            <div class="circuloi"></div>
+                        </div>
+                    </div>
+
                     <div class="item izq">
                         <h4>Técn. Comercio y Servicios Administrativos, Mencion Informática</h4>
                         <span class="casa">U.E.P Fe y Alegria "Santa Elena" </span>
                         <span class="fecha">2017 - 2020</span>
                         <p>Educación Media Técnica en Comercio y Servicios Administrativos, mención Informática</p>
                         <div class="containeri">
-                            <div class="circuloi">
-                                
-                            </div>
+                            <div class="circuloi"></div>
+                        </div>
+                    </div>
+
+                    <div class="item izq">
+                        <h4>Curso Operador Windows</h4>
+                        <span class="casa">Digicomp C.A. Acarigua, Edo. Portuguesa.</span>
+                        <span class="fecha"> 160 horas Académicas (2012)</span>
+                        <p>Formacion de uso y manejo de sistema operativos Windows, asi como de sus aplicaciones y herramientas ofimáticas.</p>
+                        <div class="containeri">
+                            <div class="circuloi"></div>
                         </div>
                     </div>
                 </div>
